--- a/index.html
+++ b/index.html
@@ -829,7 +829,7 @@
               </div>
               <div class="col-12">
                 <label class="form-label">URL do footer</label>
-                <input id="footerUrl" class="form-control" value="https://ik.imagekit.io/fsobpyaa5i/footer_smart.png?updatedAt=1769508815337">
+                <input id="footerUrl" class="form-control" value="https://ik.imagekit.io/fsobpyaa5i/Group%2030469%20(1).png">
               </div>
               <div class="col-12">
                 <label class="form-label">Logótipo 2smart</label>
